--- a/src/Xamarin.Forms.Platforms/Xamarin.Forms.Platform.WPF/Xamarin.Forms.Platform.WPF.csproj
+++ b/src/Xamarin.Forms.Platforms/Xamarin.Forms.Platform.WPF/Xamarin.Forms.Platform.WPF.csproj
@@ -13,7 +13,8 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
-    <NuGetPackageImportStamp>1a229718</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
@@ -58,11 +59,17 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="Xamarin.Forms.Core">
-      <HintPath>..\packages\Xamarin.Forms.1.2.3.6255-pre3\lib\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.Core.dll</HintPath>
+    <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Xamarin.Forms.2.3.2.118-pre1\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Core.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Xamarin.Forms.Xaml">
-      <HintPath>..\packages\Xamarin.Forms.1.2.3.6255-pre3\lib\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.Xaml.dll</HintPath>
+    <Reference Include="Xamarin.Forms.Platform, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Xamarin.Forms.2.3.2.118-pre1\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Platform.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Xamarin.Forms.Xaml, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Xamarin.Forms.2.3.2.118-pre1\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -71,11 +78,11 @@
     <Compile Include="Platform.WPF\Controls\FlipViewPanel.cs" />
     <Compile Include="Platform.WPF\Converters\CellToViewConverter.cs" />
     <Compile Include="Platform.WPF\IsolatedStorage.cs" />
-    <Compile Include="Platform.WPF\Rendereres\CarouselPageRenderer.xaml.cs">
+    <Compile Include="Platform.WPF\Renderers\CarouselPageRenderer.xaml.cs">
       <DependentUpon>CarouselPageRenderer.xaml</DependentUpon>
     </Compile>
     <Compile Include="Platform.WPF\Converters\ItemTemplateConverter.cs" />
-    <Compile Include="Platform.WPF\Rendereres\EntryRenderer.xaml.cs">
+    <Compile Include="Platform.WPF\Renderers\EntryRenderer.xaml.cs">
       <DependentUpon>EntryRenderer.xaml</DependentUpon>
     </Compile>
     <Compile Include="Platform.WPF\Controls\StackLayoutControl.xaml.cs">
@@ -89,16 +96,16 @@
     <Compile Include="Platform.WPF\Extensions.cs" />
     <Compile Include="Platform.WPF\IWPFRenderer.cs" />
     <Compile Include="Platform.WPF\PlatformServices.cs" />
-    <Compile Include="Platform.WPF\Rendereres\ButtonRenderer.cs" />
-    <Compile Include="Platform.WPF\Rendereres\ActivityIndicatorRenderer.cs" />
-    <Compile Include="Platform.WPF\Rendereres\ImageRenderer.cs" />
-    <Compile Include="Platform.WPF\Rendereres\PageRenderer.cs" />
-    <Compile Include="Platform.WPF\Rendereres\StackLayoutRenderer.cs" />
-    <Compile Include="Platform.WPF\Rendereres\ViewRenderer.cs" />
-    <Compile Include="Platform.WPF\Rendereres\ElementRenderer.cs" />
-    <Compile Include="Platform.WPF\Rendereres\VisualElementRenderer.cs" />
-    <Compile Include="Platform.WPF\Rendereres\ContentPageRenderer.cs" />
-    <Compile Include="Platform.WPF\Rendereres\LabelRenderer.cs" />
+    <Compile Include="Platform.WPF\Renderers\ButtonRenderer.cs" />
+    <Compile Include="Platform.WPF\Renderers\ActivityIndicatorRenderer.cs" />
+    <Compile Include="Platform.WPF\Renderers\ImageRenderer.cs" />
+    <Compile Include="Platform.WPF\Renderers\PageRenderer.cs" />
+    <Compile Include="Platform.WPF\Renderers\StackLayoutRenderer.cs" />
+    <Compile Include="Platform.WPF\Renderers\ViewRenderer.cs" />
+    <Compile Include="Platform.WPF\Renderers\ElementRenderer.cs" />
+    <Compile Include="Platform.WPF\Renderers\VisualElementRenderer.cs" />
+    <Compile Include="Platform.WPF\Renderers\ContentPageRenderer.cs" />
+    <Compile Include="Platform.WPF\Renderers\LabelRenderer.cs" />
     <Compile Include="Platform.WPF\RendererFactory.cs" />
     <Compile Include="Platform.WPF\ThreadTimer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -129,12 +136,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\samples\XamlSample.WPF\XamlSample\XamlSample.csproj">
-      <Project>{783761df-fd9f-4e2b-b106-250e0c8421f4}</Project>
-      <Name>XamlSample</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Page Include="Platform.WPF\CommonResources.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -143,11 +144,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Platform.WPF\Rendereres\CarouselPageRenderer.xaml">
+    <Page Include="Platform.WPF\Renderers\CarouselPageRenderer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Platform.WPF\Rendereres\EntryRenderer.xaml">
+    <Page Include="Platform.WPF\Renderers\EntryRenderer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -166,10 +167,10 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
-    <Error Condition="!Exists('..\packages\Xamarin.Forms.1.2.3.6255-pre3\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xamarin.Forms.1.2.3.6255-pre3\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets'))" />
+    <Error Condition="!Exists('..\packages\Xamarin.Forms.2.3.2.118-pre1\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xamarin.Forms.2.3.2.118-pre1\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets'))" />
   </Target>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <Import Project="..\packages\Xamarin.Forms.1.2.3.6255-pre3\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.2.3.6255-pre3\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets')" />
+  <Import Project="..\packages\Xamarin.Forms.2.3.2.118-pre1\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.2.118-pre1\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
